# 42_python_for_data_sciences

./: README.md  import.py
Module_0/: Makefile  README.md  requirements.txt  test_all.py
Module_0/ex00/: Hello.py  ex00_test.py  test_Hello.py  tester.py
Module_0/ex01/: ex01_test.py  format_ft_time.py  test_format_ft_time.py  tester.py
Module_0/ex02/: ex02_test.py  find_ft_type.py  test_find_ft_type.py  tester.py
Module_0/ex03/: NULL_not_found.py  ex03_test.py  test_NULL_not_found.py  tester.py
Module_0/ex04/: ex04_test.py  test_whatis.py  tester.py  whatis.py
Module_0/ex05/: building.py  ex05_test.py  test_building.py  tester.py
Module_0/ex06/: ex06_test.py  filterstring.py  ft_filter.py  test_filterstring.py  tester.py
Module_0/ex07/: ex07_test.py  sos.py  test_sos.py  tester.py
Module_0/ex08/: Loading.py  ex08_test.py  test_Loading.py  tester.py
Module_0/ex09/: LICENSE  README.md  pyproject.toml  test_ft_package.py  tester.py  zshrc
Module_0/ex09/ft_package/: __init.py__  __init__.py  count.py  count_in_list.py
Module_0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Module_0/tests/: test_00.py  test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py
Module_1/: Dockerfile  Makefile  README.md  printer.py  requirements.txt  test_all.py
Module_1/ex00/: ex00_test.py  give_bmi.py  test_ex00.py  tester.py
Module_1/ex01/: array2D.py  ex01_test.py  test_ex01.py  (+1 more)
Module_2/: Makefile  README.md
Module_3/: Makefile  README.md  requirements.txt
Module_4/: Makefile  README.md  requirements.txt
(+71 files in other folders)
